# trash-cleaner

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: cleaner.rs  lib.rs  main.rs  scanner.rs  utils.rs
